種族値比較機能の大幅見直し